[package]
name = "evemoddl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
indicatif = "0.17"
serde_yaml = "0.9"
strsim = "0.11"
tokio = { version = "1.52.0", features = ["full"] }
toml = "1.1.2"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
